--- a/src/main/resources/org/example/lab1new/hello-view.fxml
+++ b/src/main/resources/org/example/lab1new/hello-view.fxml
@@ -25,8 +25,8 @@
                   <Polygon fx:id="shooting" fill="DODGERBLUE" onMouseClicked="#handlePolygonClick" points="0, 0, 0, 20, 20, 10" stroke="BLACK" strokeType="INSIDE" />
               </children>
             </Pane>
-            <Circle fx:id="circle2" centerX="380.0" centerY="61.0" fill="blue" radius="50.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fx:id="circle1" centerX="677.0" centerY="36.0" fill="red" radius="25.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle2" centerX="380.0" centerY="150.0" fill="blue" radius="50.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle1" centerX="677.0" centerY="150.0" fill="red" radius="25.0" stroke="BLACK" strokeType="INSIDE" />
          <Line endY="-134.0" layoutX="379.0" layoutY="134.0" startY="166.00003051757812" />
          <Line endX="-1.0" endY="-111.00000762939453" layoutX="677.0" layoutY="111.0" startX="-1.0" startY="206.80001831054688" />
         </children>
@@ -34,7 +34,8 @@
     <Pane prefHeight="80.0" prefWidth="604.0"><children>
         <Button layoutY="14.0" mnemonicParsing="false" onAction="#toStartGame" text="Начать игру" />
         <Button layoutX="118.0" layoutY="14.0" mnemonicParsing="false" onAction="#toEndGame" text="Закончить игру" />
-        <Button layoutX="250.0" layoutY="14.0" mnemonicParsing="false" onAction="#togglePause" text="Pause" />
+        <Button layoutX="250.0" layoutY="14.0" mnemonicParsing="false" onAction="#togglePause" text="Пауза" />
+         <Button layoutX="347.0" layoutY="14.0" mnemonicParsing="false" text="Добавить игрока" />
     </children></Pane>
 
 </VBox>
