--- a/src/main/resources/org/example/lab1new/hello-view.fxml
+++ b/src/main/resources/org/example/lab1new/hello-view.fxml
@@ -9,31 +9,33 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-    <Pane prefHeight="81.0" prefWidth="191.0">
-        <Label text="Счет игрока:"/>
-        <Label fx:id="hits" layoutX="28.0" layoutY="34.0" text="0"/>
-        <Label layoutX="100.0" text="Выстрелов:"/>
-        <Label fx:id="shoots" layoutX="127.0" layoutY="34.0" text="0"/>
+    <Pane fx:id="statMenu" prefHeight="81.0" prefWidth="191.0">
+        <VBox layoutY="-6.0" prefHeight="82.0" prefWidth="100.0" style="-fx-background-color: yellow;">
+            <children>
+                <Label text="Номер игрока:" />
+                <Label fx:id="id" text="№" />
+                <Label text="Счет игрока:" />
+                <Label fx:id="hits" text="0" />
+                <Label text="Выстрелов:" />
+                <Label fx:id="shoots" text="0" />
+            </children>
+        </VBox>
     </Pane>
 
     <Pane fx:id="parentWindow" prefHeight="300.0" prefWidth="1000.0">
         <Pane fx:id="pane" prefHeight="300.0" prefWidth="62.0" style="-fx-background-color: yellow;">
-            <Polygon fx:id="shooting" fill="DODGERBLUE" onMouseClicked="#handlePolygonClick"
-                     points="0, 0, 0, 20, 20, 10" stroke="BLACK" strokeType="INSIDE"/>
+            <Polygon fx:id="shooting" fill="DODGERBLUE" onMouseClicked="#handlePolygonClick" points="0, 0, 0, 20, 20, 10" stroke="BLACK" strokeType="INSIDE" />
         </Pane>
-        <Circle fx:id="circle2" centerX="380.0" centerY="150.0" fill="blue" radius="50.0" stroke="BLACK"
-                strokeType="INSIDE"/>
-        <Circle fx:id="circle1" centerX="677.0" centerY="150.0" fill="red" radius="25.0" stroke="BLACK"
-                strokeType="INSIDE"/>
-        <Line endY="-134.0" layoutX="379.0" layoutY="134.0" startY="166.00003051757812"/>
-        <Line endX="-1.0" endY="-111.00000762939453" layoutX="677.0" layoutY="111.0" startX="-1.0"
-              startY="206.80001831054688"/>
+        <Circle fx:id="circle2" centerX="380.0" centerY="150.0" fill="blue" radius="50.0" stroke="BLACK" strokeType="INSIDE" />
+        <Circle fx:id="circle1" centerX="677.0" centerY="150.0" fill="red" radius="25.0" stroke="BLACK" strokeType="INSIDE" />
+        <Line endY="-134.0" layoutX="379.0" layoutY="134.0" startY="166.00003051757812" />
+        <Line endX="-1.0" endY="-111.00000762939453" layoutX="677.0" layoutY="111.0" startX="-1.0" startY="206.80001831054688" />
     </Pane>
     <Pane prefHeight="80.0" prefWidth="604.0">
-        <Button layoutY="14.0" mnemonicParsing="false" onAction="#toStartGame" text="Начать игру"/>
-        <Button layoutX="118.0" layoutY="14.0" mnemonicParsing="false" onAction="#toEndGame" text="Закончить игру"/>
-        <Button layoutX="250.0" layoutY="14.0" mnemonicParsing="false" onAction="#togglePause" text="Пауза"/>
-        <Button fx:id="connecting" layoutX="347.0" layoutY="14.0" mnemonicParsing="false" onAction="#connect" text="Подключиться к серверу"/>
+        <Button layoutY="14.0" mnemonicParsing="false" onAction="#toStartGame" text="Начать игру" />
+        <Button layoutX="118.0" layoutY="14.0" mnemonicParsing="false" onAction="#toEndGame" text="Закончить игру" />
+        <Button layoutX="250.0" layoutY="14.0" mnemonicParsing="false" onAction="#togglePause" text="Пауза" />
+        <Button fx:id="connecting" layoutX="347.0" layoutY="14.0" mnemonicParsing="false" onAction="#connect" text="Подключиться к серверу" />
     </Pane>
 
 </VBox>
